# image-recognition-wasm-rs

./: Makefile.toml  package.json  tsconfig.json
learning-py/: .gitignore  README.md  conda-env.yaml  pyproject.toml
learning-py/notebooks/: notebook01.ipynb  tf2onnx.ipynb
learning-py/scripts/: notebook01.py  tf2onnx.py
src/: main.ts
wasm-rs/: Cargo.toml
wasm-rs/src/: bindings.rs  lib.rs
