[package]
name = "wasm-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.80"
tract-onnx = "0.16.4"
wee_alloc = "0.4.5"
image = "0.24.0"

[profile.release]
opt-level = "s"
codegen-units = 1
lto = true
